--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <div class="logo">
+                placeholder
+            </div>    
+            <nav>
+                <ul class="main-nav">
+                    <li>Home</li>
+                    <li>Profile</li>
+                    <li>Messages</li>
+                    <li>History</li>
+                    <li>Tasks</li>
+                    <li>Communities</li>
+                </ul>
+                <ul class="extra">
+                    <li>Settings</li>
+                    <li>Support</li>
+                    <li>Privacy</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header">
+            <div>text</div>
+            <div>text</div>
+            <div>text</div>
+            <div>text</div>
+        </div>
+        <div class="main">
+            <article>
+                Your Projects
+                <div class="cards">text</div>
+                <div class="cards">text</div>
+                <div class="cards">text</div>
+                <div class="cards">text</div>
+                <div class="cards">text</div>
+                <div class="cards">text</div>
+            </article>
+            <div>
+                Announcements
+            </div>
+            <div>
+                Trending
+            </div>
+        </div>
+    </div>
 </body>
 </html>
