--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             </div>    
             <nav>
                 <ul class="main-nav">
-                    <li>Home</li>
-                    <li>Profile</li>
-                    <li>Messages</li>
+                    <li> <img class="icon" src="icons/home.svg" alt="home"> Home</li>
+                    <li> <img class="icon" src="icons/account.svg" alt="profile"> Profile</li>
+                    <li> <img class="icon" src="icons/messages.svg" alt="messages"> Messages</li>
                     <li>History</li>
                     <li>Tasks</li>
                     <li>Communities</li>
