changed some color

--- a/index.html
+++ b/index.html
@@ -11,29 +11,32 @@
     <div class="container">
         <div class="sidebar">
             <div class="logo">
-                placeholder
+                <img id="logo" src="icons/dashboard.svg" alt="dashboard"> <span>Dashboard</span>
             </div>    
             <nav>
                 <ul class="main-nav">
                     <li> <img class="icon" src="icons/home.svg" alt="home"> Home</li>
                     <li> <img class="icon" src="icons/account.svg" alt="profile"> Profile</li>
                     <li> <img class="icon" src="icons/messages.svg" alt="messages"> Messages</li>
-                    <li>History</li>
-                    <li>Tasks</li>
-                    <li>Communities</li>
+                    <li> <img class="icon" src="icons/history.svg" alt="history"> History</li>
+                    <li> <img src="icons/tasks.svg" alt="tasks" class="icon"> Tasks</li>
+                    <li> <img src="icons/communities.svg" alt="communities" class="icon"> Communities</li>
                 </ul>
                 <ul class="extra">
-                    <li>Settings</li>
-                    <li>Support</li>
-                    <li>Privacy</li>
+                    <li> <img src="icons/settings.svg" alt="settings" class="icon"> Settings</li>
+                    <li> <img src="icons/support.svg" alt="support" class="icon"> Support</li>
+                    <li> <img src="icons/privacy.svg" alt="" class="icon"> Privacy</li>
                 </ul>
             </nav>
         </div>
         <div class="header">
-            <div>text</div>
-            <div>text</div>
-            <div>text</div>
-            <div>text</div>
+            <div> <img class="searchcon" src="icons/search.svg" alt=""> <input class="searchbar" name="search" type="text"> </div>
+            <div> text </div>
+            <div class="greeting">
+                <img src="icons/avatar.svg" alt="avatar" class="avatar"> 
+                <div>Hi there, <br> <em><b>EnFuego</b></em></div>
+            </div>
+            <div class="buttons"><button>New</button><button>Upload</button><button>Share</button></div>
         </div>
         <div class="main">
             <article>
