layout done, project not exact/fully complete

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="header">
             <div> <img class="searchcon" src="icons/search.svg" alt=""> <input class="searchbar" name="search" type="text"> </div>
-            <div> text </div>
+            <div class="right-corner"> <img class="bell" src="icons/bell.svg" alt="bell"> <img class="small-avatar" src="icons/avatar.svg" alt="small avatar"> <div class="name">EnFuego</div> </div>
             <div class="greeting">
                 <img src="icons/avatar.svg" alt="avatar" class="avatar"> 
                 <div>Hi there, <br> <em><b>EnFuego</b></em></div>
@@ -39,20 +39,38 @@
             <div class="buttons"><button>New</button><button>Upload</button><button>Share</button></div>
         </div>
         <div class="main">
+            Your Projects
             <article>
-                Your Projects
-                <div class="cards">text</div>
-                <div class="cards">text</div>
-                <div class="cards">text</div>
-                <div class="cards">text</div>
-                <div class="cards">text</div>
-                <div class="cards">text</div>
+                <!-- Your Projects -->
+                <div class="cards"><h3>Super Cool Project</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dignissim enim sit amet venenatis urna cursus eget nunc. Ullamcorper sit amet risus nullam eget felis eget. Eget arcu dictum varius duis at consectetur. Sed tempus urna et pharetra pharetra. Leo a diam sollicitudin tempor id eu nisl nunc.</p></div>
+                <div class="cards"><h3>Less Cool Project</h3><p>Viverra aliquet eget sit amet tellus. Turpis nunc eget lorem dolor sed viverra ipsum nunc. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Elementum pulvinar etiam non quam. Facilisis mauris sit amet massa vitae tortor condimentum lacinia quis.</p></div>
+                <div class="cards"><h3>Impossible App</h3><p>Sed pulvinar proin gravida hendrerit lectus. Platea dictumst vestibulum rhoncus est pellentesque elit. Id nibh tortor id aliquet lectus proin nibh. Urna duis convallis convallis tellus id interdum velit laoreet. Non enim praesent elementum facilisis leo vel fringilla est ullamcorper. Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Lorem ipsum dolor sit amet consectetur adipiscing elit ut.</p></div>
+                <div class="cards"><h3>Easy Peasy App</h3><p>Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit. Tempus urna et pharetra pharetra. Mi tempus imperdiet nulla malesuada pellentesque elit eget.</p></div>
+                <div class="cards"><h3>Ad Blocker</h3><p>Odio ut sem nulla pharetra diam. A condimentum vitae sapien pellentesque. Massa placerat duis ultricies lacus. Feugiat in ante metus dictum. Nisi est sit amet facilisis magna etiam tempor orci. Vel pharetra vel turpis nunc eget lorem.</p></div>
+                <div class="cards"><h3>Money Maker</h3><p>Viverra vitae congue eu consequat ac. Porttitor lacus luctus accumsan tortor posuere. Mauris a diam maecenas sed enim ut sem viverra. Tincidunt ornare massa eget egestas purus viverra accumsan in nisl. Cursus eget nunc scelerisque viverra mauris in aliquam sem. Aliquam ut porttitor leo a diam sollicitudin tempor id.</p></div>
             </article>
-            <div>
-                Announcements
+            <div class="announce">
+                <h2>Announcements</h2>
+                <div>
+                    <div class="first">
+                        <h4>Site Maintenance</h4>
+                        <p>Id porta nibh venenatis cras sed felis eget velit aliquet. Vel eros donec ac odio tempor orci dapibus ultrices in. Facilisis sed odio morbi quis.</p>
+                    </div>
+                    <div class="second">
+                        <h4>Community Share Day</h4>
+                        <p>Faucibus in ornare quam viverra orci sagittis eu volutpat odio. Senectus et netus et malesuada fames. At lectus urna duis convallis convallis tellus id interdum velit.</p>
+                    </div>
+                    <div class="third">
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Commodo sed egestas egestas fringilla phasellus faucibus. Sapien nec sagittis aliquam malesuada bibendum arcu vitae elementum curabitur.</p>
+                    </div>
+                </div>
             </div>
-            <div>
-                Trending
+            <div class="trending">
+                <h2>Trending</h2>
+                <div>Ant</div>
+                <div>Sam</div>
+                <div>Mike</div>
             </div>
         </div>
     </div>
